fixed image overflow issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -202,14 +202,15 @@ h2.reading {
 }
 
 /* Reading Modals */
-.modal-body img {
-  float: left;
-  margin-right: 2em;
-  box-shadow: 2px 2px 5px gray;
+.modal-body {
+  overflow: auto;
 }
 
 .modal-body img {
+  float: left;
+  margin-right: 2em;
   margin-bottom: 20px;
+  box-shadow: 2px 2px 5px gray;
 }
 
 /* Downloads Page */
